--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version : "3.8"
 services :
   web :
-     build : .
+     image : shraddhagupta525/sample-web:latest
      ports :
          - "80:80"
